[build-dependencies.substrate-wasm-builder]
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '4.0.0'

[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
    'storage-order/runtime-benchmarks',
]
std = [
    "sp-authority-discovery/std",
    "pallet-authority-discovery/std",
    "pallet-authorship/std",
    "sp-consensus-babe/std",
    "pallet-babe/std",
    "pallet-balances/std",
    "sp-block-builder/std",
    "codec/std",
    "pallet-collective/std",
    "frame-executive/std",
    "pallet-grandpa/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-core/std",
    "pallet-randomness-collective-flip/std",
    "sp-std/std",
    "pallet-session/std",
    "sp-api/std",
    "sp-runtime/std",
    "sp-staking/std",
    "pallet-staking/std",
    "sp-session/std",
    "pallet-sudo/std",
    "frame-support/std",
    "frame-benchmarking/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "pallet-election-provider-multi-phase/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sp-npos-elections/std",
    "pallet-offences/std",
    "pallet-scheduler/std",
    "pallet-utility/std",
    'codec/std',
    'frame-executive/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-sudo/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'storage-order/std',
    'storage-order-runtime-api/std',
    'worker/std',
    'benefits/std',
    'worker-runtime-api/std',
    'primitives/std',
    'payment/std',
    'sp-arithmetic/std',
    "pallet-offences/std",
    'frame-support/std',
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
]

[dependencies]
pallet-staking = { path = "../pallets/staking", default-features = false, version = "3.0.0" }
smallvec = "1.4.1"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
optional = true
tag = 'monthly-2021-07'
version = '3.1.0'

[dependencies.frame-executive]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
optional = true
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.pallet-babe]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-balances]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-grandpa]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.1.0'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-sudo]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'


[dependencies.payment]
default-features = false
path = '../pallets/payment'
version = '3.0.0'

[dependencies.storage-order]
default-features = false
path = '../pallets/storage-order'
version = '3.0.0'

[dependencies.storage-order-runtime-api]
default-features = false
path = '../pallets/storage-order/runtime-api'
version = '3.0.0'

[dependencies.benefits]
default-features = false
path = '../pallets/benefits'
version = '3.0.0'

[dependencies.worker]
default-features = false
path = '../pallets/worker'
version = '3.0.0'

[dependencies.worker-runtime-api]
default-features = false
path = '../pallets/worker/runtime-api'
version = '3.0.0'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-api]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-block-builder]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-consensus-babe]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '0.9.0'

[dependencies.sp-core]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-inherents]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-offchain]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-session]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-version]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-staking]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-staking-reward-curve]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'


[dependencies.pallet-session]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'


#[dependencies.pallet-staking]
#default-features = false
#git = 'https://gitee.com/mohaijiang/substrate.git'
#tag = 'monthly-2021-07'
#version = '3.0.0'

[dependencies.frame-election-provider-support]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-election-provider-multi-phase]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-npos-elections]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-collective]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-authority-discovery]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-authority-discovery]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-authorship]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-offences]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-scheduler]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-utility]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-arithmetic]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.primitives]
package="ttc-primitives"
default-features = false
path = '../primitives'
version = '3.0.0'