[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'benefits'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'frame-benchmarking/std',
    'sp-runtime/std',
    'sp-std/std',
    'primitives/std',
    "serde/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
optional = true
tag = 'monthly-2021-07'
version = '3.1.0'

[dependencies.frame-support]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.serde]
optional = true
version = '1.0.116'

[dependencies.primitives]
default-features = false
package="ttc-primitives"
path = '../../primitives'
version = '3.0.0'
