[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
description = 'FRAME pallet template for defining custom runtime logic.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'pallet-staking'
readme = 'README.md'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '3.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


[dependencies.sp-std]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-staking]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-session]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.pallet-authorship]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.sp-application-crypto]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-election-provider-support]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
optional = true
tag = 'monthly-2021-07'
version = '3.1.0'

[dependencies.primitives]
package="ttc-primitives"
default-features = false
path = '../../primitives'
version = '3.0.0'

[dependencies.worker]
default-features = false
path = '../worker'
version = '3.0.0'

[dependencies]
static_assertions = "1.1.0"
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
log = { version = "0.4.14", default-features = false }
paste = "1.0"

# Optional imports for benchmarking
rand_chacha = { version = "0.2", default-features = false, optional = true }


[dev-dependencies.sp-storage]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dev-dependencies.sp-tracing]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dev-dependencies.sp-core]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dev-dependencies.pallet-balances]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dev-dependencies.pallet-timestamp]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dev-dependencies.pallet-staking-reward-curve]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dev-dependencies.substrate-test-utils]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dev-dependencies.frame-benchmarking]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.1.0'

[dev-dependencies.frame-election-provider-support]
default-features = false
git = 'https://gitee.com/mohaijiang/substrate.git'
tag = 'monthly-2021-07'
version = '3.0.0'

[dev-dependencies]
rand_chacha = { version = "0.2" }
parking_lot = "0.11.1"
hex = "0.4"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-std/std",
    "sp-io/std",
    "frame-support/std",
    "sp-runtime/std",
    "sp-staking/std",
    "pallet-session/std",
    "frame-system/std",
    "pallet-authorship/std",
    "sp-application-crypto/std",
    "log/std",
    "frame-election-provider-support/std",
    'primitives/std',
    'worker/std',

]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-election-provider-support/runtime-benchmarks",
    "rand_chacha",
]
try-runtime = ["frame-support/try-runtime"]


